cabal-version:      2.4
name:               hunit-cabal-simple
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             diegopacheco
maintainer:         diego.pacheco.it@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hunit-cabal-simple
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
    hs-source-dirs:   app
    other-modules:
        Add
    default-language: Haskell2010

Test-Suite test
    type: exitcode-stdio-1.0
    ghc-options: -Wall
    hs-source-dirs: app, test
    main-is:    Tests.hs
    build-depends: base, HUnit
    default-language: Haskell2010